--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
-p {
-color: purple
-}
 body {
   height: 100%;
   margin: 8%;
   width: 100%;
   }
+  h2 {
+    text-align: left;
+  }
 h4 {
   text-align: left;
 }
 h3 {
+  text-align: left;
+}
+h5 {
   text-align: left;
 }
