--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   height: 100%;
   margin: 10%;
   width: 100%;
+  font-family: Palatino, 'Palatino Linotype', serif;
   }
   h2 {
     text-align: left;
