--- a/style.css
+++ b/style.css
@@ -5,3 +5,16 @@ body {
 }
 
 /***** GRID *****/
+.full-width {
+	width: 1200px;
+	margin: 0 auto;
+}
+.half-width {
+	width: 600px;
+	margin: 0 auto;
+	float: left;
+}
+.third-width {
+	width: 400px;
+	margin: 0 auto;
+	float: left;
