--- a/style.css
+++ b/style.css
@@ -10,14 +10,10 @@ body {
 	margin: 0 auto;
 }
 .half-width {
-	width: 600px;
+	width: 200px 800px;
 	margin: 0 auto;
 	float: left;
 }
-.third-width {
-	width: 400px;
-	margin: 0 auto;
-	float: left;
 	
 /***** Header *****/
 header {
