--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
   font-family: 'Lora', serif;
   color: black;
+  border: solid;
 
 }
 
@@ -24,16 +25,8 @@ body {
 /***** Header *****/
 header {
 	height: 800px;
-	background: url(
+	background: url("<img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg")
 	background-size: cover;
 	
-}
-header h1 {
-	padding: 50px;
-	font-size: 30px;
-}
-header h2 {
-	text-align: right;
-	font-size: 20px;
-}
+
 
