--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
 body {
   font-family: 'Lora', serif;
   color: black;
-
+}
+#header img {
+	text-align: center;
 }
 
 /***** GRID *****/
@@ -21,11 +23,8 @@ body {
 	margin: 0 auto;
 	float: left;
 	
-/***** Header *****/
-header {
-	height: 800px;
-	background: url("https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865")
-	background-size: cover;
+
+
 	
 
 
