--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
 .header {
 	width: 1200px;
 	margin: 10px auto;
-	border-bottom: 1px solid #000000
 }
 
 .image-left {
@@ -34,6 +33,10 @@ body {
 	
 
 	
+.work-experience {
+	width: 1200px;
+	margin: 0 auto;
+}
 
 .full-width {
 	width: 1200px;
