--- a/style.css
+++ b/style.css
@@ -33,21 +33,21 @@ body {
 	
 
 	
-.work-experience {
+.body header {
 	width: 1200px;
 	margin: 0 auto;
 }
 
-.full-width {
+.dero {
 	width: 1200px;
 	margin: 0 auto;
 }
-.left-half {
+.dero-left {
 	width: 400px;
 	margin: 0 auto;
 	float: left;
 }
-.right-half {
+.dero-right {
 	width: 800px;
 	margin: 0 auto;
 	float: right;
