--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ body {
 
 .res-image {
 	margin: 10px;
-	display: inline;
 }
 .res-span {
 	margin: 10px;
 	display: block;
+	font-size: 20px;
 }
 .badges {
 	display: inline;
