--- a/style.css
+++ b/style.css
@@ -10,19 +10,19 @@ body {
 
 .image {
 	margin: 10px;
-	clear: both;
 	float: left;
 }
 .contact {
 	margin: 10px;
-	float: right;
-	clear: both;
+	float: left;
+	clear: right;
+	
 }
 .contact h1 {
-	font-size: 20px;
+	font-size: 30px;
 }
 .contact h2, h3, h4 {
-	font-size: 10px;
+	font-size: 20px;
 }
 
 
