--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 	float: left;
 }
 .contact {
-	margin: 10px;
+	margin-right: 250px;
+	margin-bottom: 100px
 	float: left;
 	clear: right;
 	
