--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ body {
 	margin-right: 350px;
 	margin-bottom: 200px;
 	margin-top: 10px;
-	margin-left: 20px;
+	margin-left: 30px;
 	float: left;
 	clear: right;
 	
 	
 }
 .contact h1 {
-	font-size: 30px;
+	font-size: 40px;
 }
 .contact h2, h3, h4 {
 	font-size: 20px;
@@ -71,6 +71,12 @@ body {
 	width: 800px;
 	margin: 0 auto;
 	float: left;
+}
+.edu h3 {
+	font-size: 20px;
+}
+.edu h4 {
+	font-size: 15px;
 }
 .skills {
 	width: 1200px;
