--- a/style.css
+++ b/style.css
@@ -28,7 +28,9 @@ body {
 .contact h2, h3, h4 {
 	font-size: 20px;
 }
-
+.contact h5, h6 {
+	font-size: 20px;
+}
 .dero {
 	width: 1200px;
 	margin: 20px;
