--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@ body {
 
 
 /***** GRID *****/
+#header {
+	display: inline;
+}
 
-.image {
+#image {
 	margin: 20px;
 	float: left;
 }
-.contact {
+#contact {
 	margin-right: 340px;
 	margin-bottom: 100px;
 	margin-top: 20px;
